crates/banshee_hir/tests/snapshots/snapshots__cte_resolution_analysis.snap
---
source: crates/banshee_hir/tests/snapshots.rs
expression: render_analysis(&analysis)
---
diagnostics:
- <none>
tables:
- <none>
columns:
- <none>
output_columns:
- <none>
