crates/banshee_hir/tests/snapshots/snapshots__dml_cte_local_scope_analysis.snap
---
source: crates/banshee_hir/tests/snapshots.rs
expression: render_analysis(&analysis)
---
diagnostics:
- Warning | UPDATE without WHERE affects all rows | 17..88
tables:
- <none>
columns:
- <none>
output_columns:
- <none>
