crates/banshee_hir/tests/snapshots/snapshots__unknown_table_analysis.snap
---
source: crates/banshee_hir/tests/snapshots.rs
assertion_line: 176
expression: render_analysis(&analysis)
---
diagnostics:
- Warning | Avoid SELECT *; list columns explicitly | 7..9
- Error | Table 'missing_table' does not exist | 14..27
tables:
- <none>
columns:
- <none>
output_columns:
- <none>
